test/libsolidity/syntaxTests/types/address/address_zero_to_payable_err.sol
contract C {
    function f() public pure {
        address payable a = address(0);
    }
}
// ----
// TypeError 9574: (52-82='address payable a = address(0)'): Type address is not implicitly convertible to expected type address payable.
